# CrazyCpps

./: .gitignore  CMakeLists.txt  README.MD
cmake/config/: ConfigureDeps.cmake  MyConfigure.cmake  clear_incs_srcs.cmake  define.cmake
cmake/install/: ConfigureInstallation.cmake
cmake/modules/: FindCUDA.cmake  FindCrazyCPP.cmake
cmake/python_cmake/: ConfigurePython.cmake  python_i_template.cmake
cmake/toolsets/: CompileTools.cmake  FindPackageTools.cmake
data/: face_mesh.mtl
data/blender_obj/: cube1.mtl  cube2.mtl  test1.mtl  test2.mtl
include/: crazycpp.h
include/CrazyCppLib/CrazyRender/: BaseRender.h  BasicDraw.h  CrazyRender.h  GlTexture.h  Render.h  Shaders.h  colour.h  glsl.h
include/CrazyCppLib/CrazyUI/: CrazyGUI.h  CrazyWindow.h  Event.h  PangolinGUI.h
include/CrazyCppLib/Datastructure/: .fuse_hidden00001edc000000c1  BaseMatrix.hpp  CArray.hpp  CMatrix.hpp  CMesh.h  CPoint2D.h  CPoint3D.h  DualMap.h  Mesh.h
include/CrazyCppLib/IO/: BaseIO.h  tiny_obj_loader.h
include/CrazyCppLib/utilities/: BaseOperator.h  CrazyLog.hpp  CrazyString.h  CrossDatum.h  config.h  crazy_tools.h  file_utils.h  numpy_data.h
include/ZipLib/: ZipArchive.h  ZipArchiveEntry.h  ZipFile.h
include/ZipLib/compression/: compression_interface.h
include/ZipLib/detail/: EndOfCentralDirectoryBlock.h  ZipCentralDirectoryFileHeader.h  ZipGenericExtraField.h  ZipLocalFileHeader.h
include/ZipLib/methods/: Bzip2Method.h  DeflateMethod.h  ICompressionMethod.h  StoreMethod.h  ZipMethodResolver.h
include/ZipLib/streams/: compression_decoder_stream.h  compression_encoder_stream.h  crc32stream.h  memstream.h  nullstream.h  serialization.h  substream.h  teestream.h  zip_cryptostream.h
include/ZipLib/utils/: stream_utils.h  time_utils.h
include/cereal/: cereal.hpp  mat_cerealisation.hpp
include/cereal/archives/: binary.hpp
include/pangolin/: config.h  platform.h  stb_truetype.h  window_frameworks.h
include/pangolin/gl/: gl.h  glplatform.h
include/pangolin/handler/: handler.h
include/pangolin/plot/: plotter.h
main/: Python_Main.cpp  main.cpp
shader/: TextureFragmentShader.frag  TransformVertexShader.vert
src/CrazyCppLib/CrazyRender/: BaseRender.cpp  BasicDraw.cpp  CrazyRender.cpp  GlTexture.cpp
src/CrazyCppLib/CrazyUI/: CrazyGUI.cpp  CrazyWindow.cpp  PangolinGUI.cpp
src/CrazyCppLib/DataStructure/: CMatrix.cpp
src/CrazyCppLib/IO/: BaseIO.cpp
src/CrazyCppLib/utils/: BaseOperator.cpp  CrazyLog.cpp  CrossDatum.cpp  Timer.cpp  crazy_tools.cpp  file_utils.cpp  numpy_data.cpp
src/Pangolin/display/: opengl_render_state.cpp
src/Pangolin/gl/: glfont.cpp
src/Pangolin/handler/: handler.cpp
src/Pangolin/plot/: plotter.cpp
src/ZipLib/: ZipArchive.cpp  ZipArchiveEntry.cpp  ZipFile.cpp
src/ZipLib/detail/: EndOfCentralDirectoryBlock.cpp  ZipCentralDirectoryFileHeader.cpp  (+2 more)
(+33 files in other folders)
